--- a/dashboard.html
+++ b/dashboard.html
@@ -14,7 +14,7 @@
         <div class="bg-indigo-800 text-white w-64 space-y-6 py-7 px-2 absolute inset-y-0 left-0 transform -translate-x-full md:relative md:translate-x-0 transition duration-200 ease-in-out" id="sidebar">
             <div class="flex items-center space-x-2 px-4">
                 <i class="fas fa-hands-helping text-2xl"></i>
-                <span class="text-2xl font-extrabold">ServiceHub</span>
+                <span class="text-2xl font-extrabold">KARIGAR</span>
             </div>
             <nav>
                 <a href="dashboard.html" class="flex items-center px-4 py-2 text-indigo-100 bg-indigo-900 rounded">
@@ -361,3 +361,4 @@
 </body>
 
 </html>
+
