--- a/login.html
+++ b/login.html
@@ -3,113 +3,130 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - ServiceHub</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <title>Login - Karigar</title>
+
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
+    <style>
+        body {
+            background: linear-gradient(rgba(0,0,0,.6), rgba(0,0,0,.6)),
+            url('https://images.unsplash.com/photo-1552664730-d307ca884978');
+            background-size: cover;
+            background-position: center;
+            min-height: 100vh;
+        }
+
+        .login-card {
+            border-radius: 15px;
+            box-shadow: 0 10px 30px rgba(0,0,0,.3);
+        }
+
+        .brand {
+            font-size: 2rem;
+            font-weight: 800;
+            letter-spacing: 2px;
+            text-transform: uppercase;
+        }
+
+        .btn-primary {
+            background-color: #ff6b6b;
+            border: none;
+        }
+
+        .btn-primary:hover {
+            background-color: #ff5252;
+        }
+
+        .social-btn {
+            border-radius: 50%;
+            width: 45px;
+            height: 45px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    </style>
 </head>
-<body class="bg-gray-50">
-    <div class="min-h-screen flex flex-col justify-center py-12 sm:px-6 lg:px-8">
-        <div class="sm:mx-auto sm:w-full sm:max-w-md">
-            <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
-                Sign in to your account
-            </h2>
-            <p class="mt-2 text-center text-sm text-gray-600">
-                Or
-                <a href="signup.html" class="font-medium text-indigo-600 hover:text-indigo-500">
-                    create a new account
-                </a>
-            </p>
-        </div>
+<body>
 
-        <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
-            <div class="bg-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
-                <form class="space-y-6" action="#" method="POST" id="loginForm">
-                    <div>
-                        <label for="email" class="block text-sm font-medium text-gray-700">
-                            Email address
-                        </label>
-                        <div class="mt-1">
-                            <input id="email" name="email" type="email" autocomplete="email" required
-                                class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
-                        </div>
+<div class="container d-flex align-items-center justify-content-center min-vh-100">
+    <div class="col-md-5 col-lg-4">
+
+        <div class="card login-card">
+            <div class="card-body p-4">
+
+                <div class="text-center mb-4">
+                    <div class="brand text-dark">Karigar</div>
+                    <p class="text-muted mb-0">Sign in to your account</p>
+                </div>
+
+                <form id="loginForm">
+                    <div class="mb-3">
+                        <label class="form-label">Email Address</label>
+                        <input type="email" class="form-control" required>
                     </div>
 
-                    <div>
-                        <label for="password" class="block text-sm font-medium text-gray-700">
-                            Password
-                        </label>
-                        <div class="mt-1">
-                            <input id="password" name="password" type="password" autocomplete="current-password" required
-                                class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
-                        </div>
+                    <div class="mb-3">
+                        <label class="form-label">Password</label>
+                        <input type="password" class="form-control" required>
                     </div>
 
-                    <div class="flex items-center justify-between">
-                        <div class="flex items-center">
-                            <input id="remember-me" name="remember-me" type="checkbox"
-                                class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded">
-                            <label for="remember-me" class="ml-2 block text-sm text-gray-900">
+                    <div class="d-flex justify-content-between align-items-center mb-3">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="rememberMe">
+                            <label class="form-check-label" for="rememberMe">
                                 Remember me
                             </label>
                         </div>
-
-                        <div class="text-sm">
-                            <a href="#" class="font-medium text-indigo-600 hover:text-indigo-500">
-                                Forgot your password?
-                            </a>
-                        </div>
+                        <a href="#" class="text-decoration-none text-muted small">
+                            Forgot password?
+                        </a>
                     </div>
 
-                    <div>
-                        <button type="submit"
-                            class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-                            Sign in
-                        </button>
-                    </div>
+                    <button type="submit" class="btn btn-primary w-100 py-2">
+                        Sign In
+                    </button>
                 </form>
 
-                <div class="mt-6">
-                    <div class="relative">
-                        <div class="absolute inset-0 flex items-center">
-                            <div class="w-full border-t border-gray-300"></div>
-                        </div>
-                        <div class="relative flex justify-center text-sm">
-                            <span class="px-2 bg-white text-gray-500">
-                                Or continue with
-                            </span>
-                        </div>
-                    </div>
-
-                    <div class="mt-6 grid grid-cols-3 gap-3">
-                        <div>
-                            <a href="#"
-                                class="w-full inline-flex justify-center py-2 px-4 border border-gray-300 rounded-md shadow-sm bg-white text-sm font-medium text-gray-500 hover:bg-gray-50">
-                                <span class="sr-only">Sign in with Facebook</span>
-                                <i class="fab fa-facebook-f"></i>
-                            </a>
-                        </div>
-
-                        <div>
-                            <a href="#"
-                                class="w-full inline-flex justify-center py-2 px-4 border border-gray-300 rounded-md shadow-sm bg-white text-sm font-medium text-gray-500 hover:bg-gray-50">
-                                <span class="sr-only">Sign in with Google</span>
-                                <i class="fab fa-google"></i>
-                            </a>
-                        </div>
-
-                        <div>
-                            <a href="#"
-                                class="w-full inline-flex justify-center py-2 px-4 border border-gray-300 rounded-md shadow-sm bg-white text-sm font-medium text-gray-500 hover:bg-gray-50">
-                                <span class="sr-only">Sign in with GitHub</span>
-                                <i class="fab fa-github"></i>
-                            </a>
-                        </div>
-                    </div>
+                <div class="text-center my-4 text-muted">
+                    — OR CONTINUE WITH —
                 </div>
+
+                <div class="d-flex justify-content-center gap-3">
+                    <a href="#" class="btn btn-light social-btn">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="#" class="btn btn-light social-btn">
+                        <i class="fab fa-google"></i>
+                    </a>
+                    <a href="#" class="btn btn-light social-btn">
+                        <i class="fab fa-github"></i>
+                    </a>
+                </div>
+
+                <p class="text-center mt-4 mb-0">
+                    Don’t have an account?
+                    <a href="signup.html" class="fw-semibold text-decoration-none" style="color:#ff6b6b;">
+                        Sign up
+                    </a>
+                </p>
+
             </div>
         </div>
+
     </div>
-    <script src="../assets/js/auth.js"></script>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+    document.getElementById('loginForm').addEventListener('submit', function(e){
+        e.preventDefault();
+        // demo redirect
+        window.location.href = '../dashboard/dashboard.html';
+    });
+</script>
 </body>
 </html>
